ENHANCE:  DJI -180-180 Heading to 0-360 Convertion